test_inputs/valid/04_function_call_args.mt
@triton.jit
def call_kernel(x): {
  y = foo(x, 1, (2 + 3));
}
