test_inputs/invalid/09_invalid_call_shape.mt
@triton.jit
def bad_call(x): {
  y = tl.math.load(x);
}
